test/parser/error_recovery_fn.dmz
// RUN: (dmz %s -ast-dump 2>&1 || true) | filecheck %s
// CHECK: [[# @LINE + 1 ]]:16: error: expected type expression
fn error1() -> {
    let y: i32 = 1 + 2;
}

fn main() -> void {
    let y: i32 = 1 + 2;
}

// CHECK: [[# @LINE + 1 ]]:12: error: expected parameter declaration
fn error2( {
    let y: i32 = 1 + 2;
}

fn error3() -> void {
    let y: i32 =

// CHECK: [[# @LINE - 1 ]]:1: error: expected expression
// CHECK: [[# @LINE + 1 ]]:1: error: expected '}' at the end of a block
fn pass() -> i32 {
    let y: i32 = 1 + 2;
}

// CHECK: FunctionDecl main -> void
// CHECK-NEXT:   Block
// CHECK-NEXT:     DeclStmt
// CHECK-NEXT:       VarDecl:i32 y
// CHECK-NEXT:         BinaryOperator '+'
// CHECK-NEXT:           IntLiteral '1'
// CHECK-NEXT:           IntLiteral '2'
// CHECK-NEXT: FunctionDecl pass -> i32
// CHECK-NEXT:   Block
// CHECK-NEXT:     DeclStmt
// CHECK-NEXT:       VarDecl:i32 y
// CHECK-NEXT:         BinaryOperator '+'
// CHECK-NEXT:           IntLiteral '1'
// CHECK-NEXT:           IntLiteral '2'
